--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "animate.css": "^3.7.0",
+    "axios": "^0.18.0",
+    "json-server": "^0.14.0",
+    "swiper": "^4.4.1",
+    "vue": "^2.5.11",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
@@ -18,6 +24,7 @@
     "not ie <= 8"
   ],
   "devDependencies": {
+    "animate.css": "^3.7.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
@@ -25,10 +32,14 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "json-server": "^0.14.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "swiper": "^4.4.1",
     "vue-loader": "^13.0.5",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.4.4",
+    "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
